package com.amazon.ata.types;

/**
 * Material types that the Packaging can be made from.
 */
public enum Material {
    CORRUGATE, LAMINATED_PLASTIC
}
